# CrispEmbed

./: .gitignore  CMakeLists.txt  HISTORY.md  LEARNINGS.md  PERFORMANCE.md  PLAN.md  README.md  build-embed-wasm.sh  build-wasm.sh
.github/workflows/: build.yml  python-wheels.yml  release.yml
build-embed-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  crispembed_embed.js  crispembed_embed.wasm
build-embed-wasm/crisp_audio/: Makefile  cmake_install.cmake
build-embed-wasm/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
build-embed-wasm/ggml/src/: Makefile  cmake_install.cmake
build-embed-wasm/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
build-wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  crispembed_ocr.js  crispembed_ocr.wasm
build-wasm/ggml/: cmake_install.cmake  ggml-version.cmake
build-wasm/ggml/src/: cmake_install.cmake
cmake/: FindThreads.cmake  crispembed-config.cmake.in  crispembed.pc.in
crispembed/: Cargo.toml
crispembed-sys/: Cargo.toml  build.rs
crispembed-sys/src/: lib.rs
crispembed/src/: lib.rs
docs/: adair.md  contributing.md
examples/cli/: main.cpp  model_mgr.cpp
examples/server/: server.cpp
flutter/crispembed/android/: build.gradle
flutter/crispembed/android/src/main/: AndroidManifest.xml
flutter/crispembed/ios/: crispembed.podspec
flutter/crispembed/lib/: crispembed.dart
flutter/crispembed/lib/src/: crispembed.dart  crispembed_bindings.dart  math_ocr.dart  text_detect.dart
flutter/crispembed/linux/: CMakeLists.txt
flutter/crispembed/macos/: crispembed.podspec
flutter/crispembed/windows/: CMakeLists.txt
handover-prompts/: layout-detect-parity.md
hf_readmes/: gliner-deberta-GGUF.md  internvl2.5-2b-crispembed-GGUF.md
models/: convert-bert-to-gguf.py  convert-bttr-to-gguf.py  convert-dat-to-gguf.py  convert-decoder-embed-to-gguf.py  convert-dots-ocr-to-gguf.py  convert-face-to-gguf.py  convert-gliner-deberta-to-gguf.py  convert-got-ocr-to-gguf.py  convert-hmer-to-gguf.py  convert-internvl2-to-gguf.py  convert-layout-to-gguf.py  convert-mixtex-to-gguf.py  convert-ppformulanet-l-to-gguf.py  convert-ppformulanet-to-gguf.py  convert-qwen2vl-to-gguf.py  convert-scunet-to-gguf.py  convert-siglip-to-gguf.py  convert-surya-det-to-gguf.py  convert-tesseract-to-gguf.py  convert-trocr-safetensors-to-gguf.py  hf_readme_surya-det.md  upload_to_hf.py
python/: MANIFEST.in  README.md  pyproject.toml
python/crispembed/: __init__.py  _binding.py
src/: adair.cpp  bert_ner.cpp  bttr_ocr.cpp  bttr_ocr.h  cc_detect.cpp  classical_preproc.cpp  classical_preproc.h  cnn_embed.cpp  crispembed.cpp  crispembed.h  decoder_embed.cpp  decoder_embed.h  deepseek_ocr2.cpp  dewarp.cpp  gliner_ner.cpp  glm_ocr.cpp  glm_ocr.h  got_ocr.cpp  got_ocr.h  granite_vision_ocr.cpp  hat_sr.cpp  image_preprocess.cpp  image_preprocess.h  instructir.cpp  internvl2_ocr.cpp  internvl2_ocr.h  layout_detect.cpp  lfm2_embed.cpp  lightonocr.cpp  math_ocr.cpp  mixtex_ocr.cpp  mixtex_ocr.h  ocr_orchestrator.cpp  ocr_orchestrator.h  ocr_render.cpp  ocr_render.h  parseq_ocr.cpp  pix2struct.cpp  pix2struct.h  posformer_ocr.cpp  (+19 more)
src/core/: cpu_ops.h  vlm_attention.h
tests/: benchmark.py  debug_model.py  parity_layers_bert.py  test_all_models.py  test_all_parity.py  test_bert_ner_diff.cpp  test_bttr.cpp  test_classical_preproc.cpp  test_gliner_diff.cpp  test_glm_ocr_e2e.cpp  test_got_ocr_diff.cpp  test_hmer_image.cpp  test_internvl2_diff.cpp  test_internvl2_e2e.cpp  test_internvl2_image.cpp  test_internvl2_ocr.py  test_layout_diff.cpp  test_math_ocr_gguf.cpp  test_mixtex.cpp  test_moe_parity.py  test_ocr_orchestrator.cpp  test_pix2tex.cpp  test_ppformulanet.cpp  test_qwen2vl.cpp  test_qwen2vl_diff.cpp  test_qwen2vl_e2e.cpp  test_scunet_diff.cpp  test_surya_det.cpp  test_surya_det_diff.cpp  test_tesseract_lstm_diff.cpp  test_tps_warp.cpp  test_vit_forward.cpp
tests/parity/: posformer_compare.py  posformer_dump_ref.py  posformer_layer_dump.py  posformer_step_diff.py
tools/: compare_dec0.py  dump_aifi_trace.py  dump_dec0_diff.py  dump_dec_memory.py  dump_deepseek_ocr2_reference.py  dump_got_ocr_reference.py  dump_internvl2_reference.py  dump_lightonocr_reference.py  dump_mixtex_reference.py  dump_nafnet_reference.py  dump_ppformulanet_reference.py  dump_qwen2vl_reference.py  dump_scunet_reference.py  dump_surya_det_reference.py  dump_surya_litemla_debug.py  dump_tbsrn_reference.py  quantize.cpp  qwen2vl_tokenize.py  trace_offsets.py
tools/kaggle/crispembed-quant-upload/: quant_upload.py
tools/kaggle/firered-ocr-parity/: firered_ocr_parity.py  kernel-metadata.json
tools/kaggle/granite-vision-parity/: granite_vision_parity.py
tools/kaggle/posformer-train/: build_dict_v2.py  dictionary_v2.txt  eval_checkpoint.py  eval_checkpoint_v2.py  kernel-metadata.json  posformer_train.py  prepare_mixed_data.py  retokenize_mathwriting.py
tools/kaggle/qari-ocr-convert/: kernel-metadata.json  kernel.py
tools/kaggle/qari-ocr-test/: kernel.py
tools/kaggle/qwen2vl-convert/: kernel-metadata.json  keyven_e2e_test.py  qwen2vl_convert.py
wasm/: embed_wrapper.c
